# nosubnormals-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: fpcr.rs  guard.rs  lib.rs
